--- a/OneLocker/page5.html
+++ b/OneLocker/page5.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<a href="home.html">
+			<a href="/OneLocker/">
 				<table>
 					<tbody>
 						<tr>
@@ -35,7 +35,7 @@
 			<p style="position: absolute; top: 0px; left: 8px; margin: 0px;">Copyright © 2020 Ashwin Thomas. All Rights Reserved.</p>
 			<nav style="position: absolute; top: 0px; right: 8px;">
 				<a href="https://goo.gl/forms/BKejH4liidhVoJaC3" target="_blank">Sign-up</a>
-				<a href="login.html" class="logout">Logout</a>
+				<a href="/OneLocker/login" class="logout">Logout</a>
 				<a href="mailto:shwin320@gmail.com?subject=OneLocker Help Request" target="_blank">Get Help</a>
 			</nav>
 		</footer>
@@ -43,7 +43,7 @@
 		<script src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@54b5c5a/Dark%20Mode.js"></script>
 		<script>
 			if(localStorage.getItem("user") != "shwin17MAGD" && localStorage.getItem("user") != "demo" && localStorage.getItem("user") != "lmtsd"){
-				window.location.replace("login.html");
+				window.location.replace("/OneLocker/login");
 			} else if(localStorage.getItem("user") == "shwin17MAGD"){
 				$("title").html("Agenda — OneLocker");
 				$("#content").html('\
@@ -68,15 +68,15 @@
 				</div>\
 				');
 				$("#siteNav").html('\
-				<a href="page1.html"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/home.svg" id="dHome" width="24" height="24">Personal</a>\
-				<a href="page2.html"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/school.svg" id="dSchoo" width="24" height="24">School</a>\
-				<a href="page3.html"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/college.svg" id="dColl" width="24" height="24">College</a>\
-				<a href="page4.html"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/money.svg" id="dMon" width="24" height="24">Money</a>\
-				<a href="page5.html" id="active"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/agenda.svg" id="dAgen" width="24" height="24">Agenda</a>\
+				<a href="/OneLocker/page1"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/home.svg" id="dHome" width="24" height="24">Personal</a>\
+				<a href="/OneLocker/page2"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/school.svg" id="dSchoo" width="24" height="24">School</a>\
+				<a href="/OneLocker/page3"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/college.svg" id="dColl" width="24" height="24">College</a>\
+				<a href="/OneLocker/page4"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/money.svg" id="dMon" width="24" height="24">Money</a>\
+				<a href="/OneLocker/page5" id="active"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/agenda.svg" id="dAgen" width="24" height="24">Agenda</a>\
 				<a id="account"><span><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/account.svg" id="dAcc" width="24" height="24">Account</span><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/dropDown.svg" id="dDrop" height="18" style="display: inline-block; margin: 0px;"></a>\
 					<nav id="accOpt">\
 						<p>Welcome to your Locker, Ashwin Thomas</p>\
-						<a href="login.html" style="border-top: 1px solid #5f6368" class="logout">Logout</a>\
+						<a href="/OneLocker/login" style="border-top: 1px solid #5f6368" class="logout">Logout</a>\
 					</nav>\
 				');
 				$("#accOpt").hide();
@@ -99,7 +99,7 @@
 				$(".logout").on("click", function(e){
 					e.preventDefault();
 					localStorage.clear();
-					window.location.href="login.html";
+					window.location.href="/OneLocker/login";
 				});
 				$("#calCont").hide();
 				$("#calP").hide();
@@ -129,9 +129,9 @@
 				$("#calC").hide(1500);
 			});
 			} else if(localStorage.getItem("user") == "demo"){
-				window.location.replace("home.html");
+				window.location.replace("/OneLocker/");
 			} else if(localStorage.getItem("user") == "lmtsd"){
-				window.location.replace("home.html");
+				window.location.replace("/OneLocker/");
 			};
 			var isDark = window.matchMedia("(prefers-color-scheme: dark)");
 			darkImg(isDark);
