--- a/OneLocker/page2.html
+++ b/OneLocker/page2.html
@@ -90,7 +90,7 @@
 						<a href="https://www.lmtsd.org/Domain/75" target="_blank" title="Lower Moreland High School"><img src="https://schoolassets.s3.amazonaws.com/logos/2041/2041.gif" width=100 height=100 alt="Lower Moreland High School"></a>\
 						<a href="https://esp41pehac.eschoolplus.powerschool.com/HomeAccess/district/student/lmtsd" target="_blank" title="Home Access Center"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/hac.png" width=104.166666666 height=100 alt="Home Access Center"></a>\
 						<a href="https://www.lmtsd.org/Page/12677" target="_blank" title="Virtual Backpack"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/virtualBackpack.png" width=74.62686567 height=100 alt="Virtual Backpack"></a>\
-						<a href="https://www.lmtsd.org/Domain/126" target="_blank" title="Bell Schedules"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/schedule.svg" id="dSched" width=100 height=100 alt="Bell Schedules"></a>\
+						<a href="https://docs.google.com/spreadsheets/d/10JM2j99gsuDxnmz3sZSg9ba3a1x3w1m4-UE5FRM6_zw/edit" target="_blank" title="Class Schedule"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/schedule.svg" id="dSched" width=100 height=100 alt="Class Schedule"></a>\
 					</span>\
 				</div>\
 				');
