--- a/OneLocker/page2.html
+++ b/OneLocker/page2.html
@@ -61,9 +61,10 @@
 				<div style="width: 350px; margin: 0px 8px 8px 0px;">\
 					<h2>Textbooks:</h2>\
 					<span>\
+						<a href="https://portal.mypearson.com/portal" target="_blank" title="MyLab Math"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/pearson.png" width=100 height=100 alt="MyLab Math"></a>\
+						<a href="https://google.discoveryeducation.com/" target="_blank" title="Discovery Education"><img src="https://yt3.ggpht.com/a/AATXAJwO1yOZThQG-zFTI8e00ETVb4jro--qkFCwy3olqg=s100-c-k-c0xffffffff-no-rj-mo" width=100 height=100 alt="Discovery Education"></a>\
 						<a href="https://passport.carnegielearning.com/" target="_blank" title="Carnegie Learning"><img src="https://i.vimeocdn.com/portrait/18191102_300x300.webp" width=100 height=100 alt="Carnegie Learning"></a>\
 						<a href="https://wayf.rumba.pk12ls.com/wayf/?service=https://www.savvasrealize.com" target="_blank" title="Savvas Realize"><img src="https://media-exp1.licdn.com/dms/image/C4D0BAQEMR68Z6LCPEg/company-logo_200_200/0?e=2159024400&v=beta&t=EHibD-PK0HAuw6UHfFgUBhgFxwDkUZ7jh9a-GuxSN0k" width=100 height=100 alt="Savvas Realize"></a>\
-						<a href="https://portal.mypearson.com/portal" target="_blank" title="MyLab Math"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/pearson.png" width=100 height=100 alt="MyLab Math"></a>\
 					</span>\
 				</div>\
 				<div style="width: 650px; margin: 0px 8px 8px 0px;">\
