--- a/OneLocker/page4.html
+++ b/OneLocker/page4.html
@@ -40,7 +40,7 @@
 			</nav>
 		</footer>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@ab1e3f1/Dark%20Mode.js"></script>
+		<script src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@6bfab54/Dark%20Mode.js"></script>
 		<script>
 			if(localStorage.getItem("user") != "shwin17MAGD" && localStorage.getItem("user") != "demo" && localStorage.getItem("user") != "lmtsd"){
 				window.location.replace("/OneLocker/login");
@@ -129,7 +129,7 @@
 						<a href="https://wayf.rumba.pk12ls.com/wayf/?service=https://www.savvasrealize.com" target="_blank" title="Savvas Realize (Formerly Pearson Realize)"><img src="https://media-exp1.licdn.com/dms/image/C4D0BAQEMR68Z6LCPEg/company-logo_200_200/0?e=2159024400&v=beta&t=EHibD-PK0HAuw6UHfFgUBhgFxwDkUZ7jh9a-GuxSN0k" width=100 height=100 alt="Savvas Realize (Formerly Pearson Realize)"></a>\
 						<a href="https://portal.mypearson.com/portal" target="_blank" title="MyLab Math"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/pearson.png" width=100 height=100 alt="MyLab Math"></a>\
 						<a href="https://passport.carnegielearning.com/" target="_blank" title="Carnegie Learning (Formerly EMC Passport)"><img src="https://i.vimeocdn.com/portrait/18191102_300x300.webp" width=100 height=100 alt="Carnegie Learning (Formerly EMC Passport)"></a>\
-						<a href="https://google.discoveryeducation.com/" target="_blank" title="Discovery Education"><img src="https://yt3.ggpht.com/a/AATXAJwO1yOZThQG-zFTI8e00ETVb4jro--qkFCwy3olqg=s100-c-k-c0xffffffff-no-rj-mo" width=100 height=100 alt="Discovery Education" id="dDisc"></a>\
+						<a href="https://google.discoveryeducation.com/" target="_blank" title="Discovery Education"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@220ee6e/discovery.png" width=100 height=100 alt="Discovery Education" id="dDisc"></a>\
 					</span>\
 				</div>\
 				<div style="width: 450px; margin: 0px 8px 8px 0px;">\
