--- a/OneLocker/page3.html
+++ b/OneLocker/page3.html
@@ -139,7 +139,7 @@
 				<div style="width: 682.604735881px; margin: 0px 8px 8px 0px;">\
 					<h2>Textbooks:</h2>\
 					<span>\
-						<a href="https://wayf.rumba.pk12ls.com/wayf/?service=https://www.savvasrealize.com" target="_blank" title="Savvas Realize (Formerly Pearson Realize)"><img src="https://media-exp1.licdn.com/dms/image/C4D0BAQEMR68Z6LCPEg/company-logo_200_200/0?e=2159024400&v=beta&t=EHibD-PK0HAuw6UHfFgUBhgFxwDkUZ7jh9a-GuxSN0k" width=100 height=100 alt="Savvas Realize (Formerly Pearson Realize)"></a>\
+						<a href="https://sso.rumba.pk12ls.com/sso/login?service=https://cat.easybridge.pk12ls.com/ca/dashboard.htm&idpmetadata=https://www.lmtsd.org" target="_blank" title="Savvas Realize (Formerly Pearson Realize)"><img src="https://media-exp1.licdn.com/dms/image/C4D0BAQEMR68Z6LCPEg/company-logo_200_200/0?e=2159024400&v=beta&t=EHibD-PK0HAuw6UHfFgUBhgFxwDkUZ7jh9a-GuxSN0k" width=100 height=100 alt="Savvas Realize (Formerly Pearson Realize)"></a>\
 						<a href="https://my.hrw.com/sp/access?sp=hrw&connection=lmtsd-org" target="_blank" title="MY HRW"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/hrw.png" width=155.555555555 height=100 alt="MY HRW"></a>\
 						<a href="https://www.hmhco.com/api/external-sso/access?sp=ed&connection=lmtsd-org" target="_blank" title="Ed, Your Friend in Learning"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/ed.png" width=177.049180326 height=100 alt="Ed, Your Friend in Learning"></a>\
 						<a href="https://passport.carnegielearning.com/" target="_blank" title="Carnegie Learning (Formerly EMC Passport)"><img src="https://i.vimeocdn.com/portrait/18191102_300x300.webp" width=100 height=100 alt="Carnegie Learning (Formerly EMC Passport)"></a>\
