--- a/OneLocker/page1.html
+++ b/OneLocker/page1.html
@@ -221,9 +221,10 @@
 						<a href="https://mail.google.com/mail/" target="_blank" title="Gmail"><img src="https://lh3.googleusercontent.com/86N90L0IJ785jaRXwXX0UAycK5MZQ3fTJRaIjgvF2PVJqjw5NkVequXgELwIEAnJG0SRxVUSaa5_Yw1_wW3LrxAN4oNZ8VCoeQuddmI=h120" width=100 height=100 alt="Gmail"></a>\
 					</span>\
 				</div>\
-				<div style="width: 450px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 550px; margin: 0px 8px 8px 0px;">\
 					<h2>Online Resources:</h2>\
 					<span>\
+						<a href="https://launchpad.classlink.com/lmtsd" target="_blank" title="ClassLink"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@dc3118e/classLink.png" width=100 height=100 alt="ClassLink"></a>\
 						<a href="https://www.khanacademy.org/" target="_blank" title="Khan Academy"><img src="https://avatars0.githubusercontent.com/u/15455?s=200&v=4" width=100 height=100 alt="Khan Academy"></a>\
 						<a href="https://quizlet.com/latest" target="_blank" title="Quizlet"><img src="https://quizlet.com/a/i/brandmark/1024.893fa7e00da6339.png" width=100 height=100 alt="Quizlet"></a>\
 						<a href="http://hvlibrary.org/" target="_blank" title="Huntingdon Valley Library"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/hvLibrary.png" width=100 height=100 alt="Huntingdon Valley Library"></a>\
