--- a/OneLocker/page1.html
+++ b/OneLocker/page1.html
@@ -40,7 +40,7 @@
 			</nav>
 		</footer>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@ab1e3f1/Dark%20Mode.js"></script>
+		<script src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@17b0cc8/Dark%20Mode.js"></script>
 		<script>
 			if(localStorage.getItem("user") != "shwin17MAGD" && localStorage.getItem("user") != "demo" && localStorage.getItem("user") != "lmtsd"){
 				window.location.replace("/OneLocker/login");
@@ -51,9 +51,9 @@
 				<div style="width: 450px; margin: 0px 8px 8px 0px;">\
 					<h2>Productivity:</h2>\
 					<span>\
-						<a href="https://mail.google.com/mail/u/?authuser=shwin320@gmail.com" target="_blank" title="Gmail"><img src="https://lh3.googleusercontent.com/86N90L0IJ785jaRXwXX0UAycK5MZQ3fTJRaIjgvF2PVJqjw5NkVequXgELwIEAnJG0SRxVUSaa5_Yw1_wW3LrxAN4oNZ8VCoeQuddmI=h120" width=100 height=100 alt="Gmail"></a>\
-						<a href="https://drive.google.com/drive/u/?authuser=shwin320@gmail.com" target="_blank" title="Google Drive"><img src="https://lh3.googleusercontent.com/A-jk5o_CT_ucUdRRwmchoeMx1qoKolfGKFptEBHANKZELMmeJALE7m4KOZdDu0NjFNiekH0j2T981f5N_nZ_IU1HsRehKLPRQAX0=h120" width=100 height=100 alt="Google Drive"></a>\
-						<a href="https://calendar.google.com/calendar/?authuser=shwin320@gmail.com" target="_blank" title="Google Calendar"><img src="https://lh3.googleusercontent.com/Wj2TC83OMCWpHPH9R-ebuLwseO5cPbsoaM8YEx3oRcakA2Ck4OG-SVv9YrYE4arZ_jC2VnImXJdr1xJognMvnmAQcZtdc54vKttQew=h120" width=100 height=100 alt="Google Calander"></a>\
+						<a href="https://mail.google.com/mail/u/?authuser=shwin320@gmail.com" target="_blank" title="Gmail"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/100px-Gmail_icon_%282020%29.svg.png" width=133.33 height=100 alt="Gmail"></a>\
+						<a href="https://drive.google.com/drive/u/?authuser=shwin320@gmail.com" target="_blank" title="Google Drive"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Google_Drive_icon_%282020%29.svg/100px-Google_Drive_icon_%282020%29.svg.png" width=111.11 height=100 alt="Google Drive"></a>\
+						<a href="https://calendar.google.com/calendar/?authuser=shwin320@gmail.com" target="_blank" title="Google Calendar"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Google_Calendar_icon_%282020%29.svg/100px-Google_Calendar_icon_%282020%29.svg.png" width=100 height=100 alt="Google Calander"></a>\
 					</span>\
 				</div>\
 				<div style="width: 586.612021857px; margin: 0px 8px 8px 0px;">\
@@ -61,28 +61,29 @@
 					<span>\
 						<a href="https://news.google.com/foryou?hl=en-US&gl=US&ceid=US%3Aen" target="_blank" title="Google News"><img src="https://lh3.googleusercontent.com/J6_coFbogxhRI9iM864NL_liGXvsQp2AupsKei7z0cNNfDvGUmWUy20nuUhkREQyrpY4bEeIBuc=w300" width=100 height=100 alt="Google News"></a>\
 						<a href="https://www.cnet.com/" target="_blank" title="CNET"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Cnet-logo-red-2020.svg/250px-Cnet-logo-red-2020.svg.png" width=136.612021857 height=100 alt="CNET"></a>\
+						<a href="https://www.theverge.com/" target="_blank" title="The Verge"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/The_Verge_Logo_2016.svg/100px-The_Verge_Logo_2016.svg.png" width=100 height=100 alt="The Verge"></a>\
 						<a href="https://www.nytimes.com/" target="_blank" title="The New York Times"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/NYTimes.png" width=100 height=100 alt="The New York Times"></a>\
 						<a href="https://www.washingtonpost.com/" target="_blank" title="The Washington Post"><img src="https://lh3.googleusercontent.com/JDrO88srYGmqrOeyqtT1al3JQD0IKRS-OO7PDMjETiPuDNgCC45wJF8LIBH-QOcTMTE=s180-rw" width=100 height=100 alt="The Washington Post"></a>\
+						<a href="https://www.bbc.com/news" target="_blank" title="BBC News"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/BBC_News_2019.svg/150px-BBC_News_2019.svg.png" width="100" height=100 alt="BBC News"></a>\
 					</span>\
 				</div>\
 				<div style="width: 701.848041959px; margin: 0px 8px 8px 0px;">\
 					<h2>Learning:</h2>\
 					<span>\
-						<a href="https://www.brainpop.com/" target="_blank" title="BrainPOP"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/brainPop.png" width=100 height=100 alt="BrainPOP"></a>\
-						<a href="https://www.ted.com/" target="_blank" title="TED"><img src="https://lh3.googleusercontent.com/w_bxOqm2p2BntxtMt_MQqwxRJhI4MQR0cu-Gn_oKkd9UXGG3FH8S2xRTkx9vtArBcp8l=s180-rw" id="dTed" width=100 height=100 alt="TED"></a>\
+						<a href="https://www.youtube.com/user/crashcourse" target="_blank" title="Crash Course"><img src="https://upload.wikimedia.org/wikipedia/en/e/e9/Crash_Course_logo.png" width="100" height="100" alt="Crash Course"></a>\
 						<a href="https://www.wikipedia.org/" target="_blank" title="Wikipedia"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Wikipedia-logo-v2.svg/150px-Wikipedia-logo-v2.svg.png" width=100 height=100 alt="Wikipedia"></a>\
 						<a href="https://www.merriam-webster.com/" target="_blank" title="Merriam-Webster"><img src="https://merriam-webster.com/assets/mw/static/app-css-images/logos/mw-logo.png" width=100 height=100 alt="Merriam-Webster"></a>\
 						<a href="https://www.history.com/this-day-in-history" target="_blank" title="This Day in History"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/History_Logo.svg/800px-History_Logo.svg.png" id="dHist" width=95.3424657535 height=100 alt="This Day in History"></a>\
+						<a href="https://www.ted.com/" target="_blank" title="TED"><img src="https://lh3.googleusercontent.com/w_bxOqm2p2BntxtMt_MQqwxRJhI4MQR0cu-Gn_oKkd9UXGG3FH8S2xRTkx9vtArBcp8l=s180-rw" id="dTed" width=100 height=100 alt="TED"></a>\
+						<a href="https://learn.mangolanguages.com" target="_blank" title="Mango Languages"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@ca28682/Mango.png" id="dMan" width=93 height=100 alt="Mango Languages"></a>\
 					</span>\
 				</div>\
 				<div style="width: 650px; margin: 0px 8px 8px 0px;">\
 					<h2>Programming:</h2>\
 					<span>\
-						<a href="https://www.khanacademy.org/" target="_blank" title="Khan Academy"><img src="https://avatars0.githubusercontent.com/u/15455?s=200&v=4" width=100 height=100 alt="Khan Academy"></a>\
-						<a href="https://www.w3schools.com/" target="_blank" title="W3 Schools"><img src="https://lh3.googleusercontent.com/TMzz-6Kdjp4E0Z4hxETNvgBolVDkUBIjzczjWvfzKaV_k8cZbCv9jmCen2nhxwMKDw=s180-rw" width=100 height=100 alt="W3 Schools"></a>\
-						<a href="https://www.coursera.org/" target="_blank" title="Coursera"><img src="https://lh3.googleusercontent.com/13U5Vnio6xeZwOUzpOqf6lCq3phOUw80y4e9VLAONVfkEqYbME5ySDvg28CPien5dHs=s180-rw" width=100 height=100 alt="Coursera"></a>\
-						<a href="https://www.linkedin.com/learning/" target="_blank" title="Linkedin Learning"><img src="https://lh3.googleusercontent.com/_rscxiBBXosch987Y2RJjgeVzhCoewK_0IXsrIKFKKVAaXRqZaVXcSgap7uwM4-fbck=s180-rw" id="dLink" width=100 height=100 alt="Linked Learning"></a>\
 						<a href="https://education.github.com/pack/offers" target="_blank" title="GitHub"><img src="https://avatars0.githubusercontent.com/u/9919?s=280&v=4" width=100 height=100 alt="GitHub"></a>\
+						<a href="https://www.w3schools.com/" target="_blank" title="W3 Schools"><img src="https://lh3.googleusercontent.com/TMzz-6Kdjp4E0Z4hxETNvgBolVDkUBIjzczjWvfzKaV_k8cZbCv9jmCen2nhxwMKDw=s180-rw" width=100 height=100 alt="W3 Schools"></a>\
+						<a href="https://www.khanacademy.org/" target="_blank" title="Khan Academy"><img src="https://avatars0.githubusercontent.com/u/15455?s=200&v=4" width=100 height=100 alt="Khan Academy"></a>\
 					</span>\
 				</div>\
 				<div style="width: 450px; margin: 0px 8px 8px 0px;">\
