--- a/OneLocker/page1.html
+++ b/OneLocker/page1.html
@@ -40,7 +40,7 @@
 			</nav>
 		</footer>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@17b0cc8/Dark%20Mode.js"></script>
+		<script src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@5ec308f/Dark%20Mode.js"></script>
 		<script>
 			if(localStorage.getItem("user") != "shwin17MAGD" && localStorage.getItem("user") != "demo" && localStorage.getItem("user") != "lmtsd"){
 				window.location.replace("/OneLocker/login");
@@ -48,7 +48,7 @@
 				$("title").html("Personal — OneLocker");
 				$("#content").html('\
 				<h1>Personal</h1>\
-				<div style="width: 450px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 494.44px; margin: 0px 8px 8px 0px;">\
 					<h2>Productivity:</h2>\
 					<span>\
 						<a href="https://mail.google.com/mail/u/?authuser=shwin320@gmail.com" target="_blank" title="Gmail"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/100px-Gmail_icon_%282020%29.svg.png" width=133.33 height=100 alt="Gmail"></a>\
@@ -56,7 +56,7 @@
 						<a href="https://calendar.google.com/calendar/?authuser=shwin320@gmail.com" target="_blank" title="Google Calendar"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Google_Calendar_icon_%282020%29.svg/100px-Google_Calendar_icon_%282020%29.svg.png" width=100 height=100 alt="Google Calander"></a>\
 					</span>\
 				</div>\
-				<div style="width: 586.612021857px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 786.612021857px; margin: 0px 8px 8px 0px;">\
 					<h2>News:</h2>\
 					<span>\
 						<a href="https://news.google.com/foryou?hl=en-US&gl=US&ceid=US%3Aen" target="_blank" title="Google News"><img src="https://lh3.googleusercontent.com/J6_coFbogxhRI9iM864NL_liGXvsQp2AupsKei7z0cNNfDvGUmWUy20nuUhkREQyrpY4bEeIBuc=w300" width=100 height=100 alt="Google News"></a>\
@@ -67,10 +67,10 @@
 						<a href="https://www.bbc.com/news" target="_blank" title="BBC News"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/BBC_News_2019.svg/150px-BBC_News_2019.svg.png" width="100" height=100 alt="BBC News"></a>\
 					</span>\
 				</div>\
-				<div style="width: 701.848041959px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 738.3424657535px; margin: 0px 8px 8px 0px;">\
 					<h2>Learning:</h2>\
 					<span>\
-						<a href="https://www.youtube.com/user/crashcourse" target="_blank" title="Crash Course"><img src="https://upload.wikimedia.org/wikipedia/en/e/e9/Crash_Course_logo.png" width="100" height="100" alt="Crash Course"></a>\
+						<a href="https://www.youtube.com/user/crashcourse" target="_blank" title="Crash Course"><img src="https://upload.wikimedia.org/wikipedia/en/e/e9/Crash_Course_logo.png" width=100 height=100 alt="Crash Course"></a>\
 						<a href="https://www.wikipedia.org/" target="_blank" title="Wikipedia"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Wikipedia-logo-v2.svg/150px-Wikipedia-logo-v2.svg.png" width=100 height=100 alt="Wikipedia"></a>\
 						<a href="https://www.merriam-webster.com/" target="_blank" title="Merriam-Webster"><img src="https://merriam-webster.com/assets/mw/static/app-css-images/logos/mw-logo.png" width=100 height=100 alt="Merriam-Webster"></a>\
 						<a href="https://www.history.com/this-day-in-history" target="_blank" title="This Day in History"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/History_Logo.svg/800px-History_Logo.svg.png" id="dHist" width=95.3424657535 height=100 alt="This Day in History"></a>\
@@ -78,12 +78,19 @@
 						<a href="https://learn.mangolanguages.com" target="_blank" title="Mango Languages"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@ca28682/Mango.png" id="dMan" width=93 height=100 alt="Mango Languages"></a>\
 					</span>\
 				</div>\
-				<div style="width: 650px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 450px; margin: 0px 8px 8px 0px;">\
 					<h2>Programming:</h2>\
 					<span>\
 						<a href="https://education.github.com/pack/offers" target="_blank" title="GitHub"><img src="https://avatars0.githubusercontent.com/u/9919?s=280&v=4" width=100 height=100 alt="GitHub"></a>\
 						<a href="https://www.w3schools.com/" target="_blank" title="W3 Schools"><img src="https://lh3.googleusercontent.com/TMzz-6Kdjp4E0Z4hxETNvgBolVDkUBIjzczjWvfzKaV_k8cZbCv9jmCen2nhxwMKDw=s180-rw" width=100 height=100 alt="W3 Schools"></a>\
 						<a href="https://www.khanacademy.org/" target="_blank" title="Khan Academy"><img src="https://avatars0.githubusercontent.com/u/15455?s=200&v=4" width=100 height=100 alt="Khan Academy"></a>\
+					</span>\
+				</div>\
+				<div style="width: 350px; margin: 0px 8px 8px 0px;">\
+					<h2>Design:</h2>\
+					<span>\
+						<a href="https://www.canva.com/" target="_blank" title="Canva"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@5024bb5/Canva.png" width=100 height=100 alt="Canva"></a>\
+						<a href="https://www.vectary.com/dashboard/?teamId=b7845d38-67a1-4439-a286-e9c66adccc22" target="_blank" title="Vectary"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@5024bb5/Vectary.png" id="dVec" width=100 height=100 alt="Vectary"></a>\
 					</span>\
 				</div>\
 				<div style="width: 450px; margin: 0px 8px 8px 0px;">\
