--- a/OneLocker/page3.html
+++ b/OneLocker/page3.html
@@ -78,7 +78,7 @@
 					<span>\
 						<a href="https://accounts.google.com/o/saml2/initsso?idpid=C01p8vbki&spid=470862358434&forceauthn=false" target="_blank" title="Naviance"><img src="https://pbs.twimg.com/profile_images/1254871482737491968/NtgcfFEv_400x400.png" width=100 height=100 alt="Naviance"></a>\
 						<a href="https://www.collegeboard.org/" target="_blank" title="College Board"><img src="https://pbs.twimg.com/profile_images/826105112011665408/zCyFRC8I_400x400.jpg" width=100 height=100 alt="College Board"></a>\
-						<a href="https://www.niche.com/" target="_blank" title="Niche"><img src="https://scontent.fphl2-4.fna.fbcdn.net/v/t1.0-9/56608926_10156308670357749_1444341572580671488_n.png?_nc_cat=1&_nc_sid=85a577&_nc_ohc=FBXDXugsmqUAX_1zZe5&_nc_ht=scontent.fphl2-4.fna&oh=cfc0252b636c76cb36df9ae3338c80e3&oe=5F6F8B97" width=100 height=100 alt="Niche"></a>\
+						<a href="https://www.niche.com/" target="_blank" title="Niche"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@276583a/Niche.png" width=100 height=100 alt="Niche"></a>\
 					</span>\
 				</div>\
 				<div style="width: 307.999999998px; margin: 0px 8px 8px 0px;">\
