--- a/OneLocker/page2.html
+++ b/OneLocker/page2.html
@@ -40,7 +40,7 @@
 			</nav>
 		</footer>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@6bfab54/Dark%20Mode.js"></script>
+		<script src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@aea15aa/Dark%20Mode.js"></script>
 		<script>
 			if(localStorage.getItem("user") != "shwin17MAGD" && localStorage.getItem("user") != "demo" && localStorage.getItem("user") != "lmtsd"){
 				window.location.replace("/OneLocker/login");
@@ -48,14 +48,20 @@
 				$("title").html("School — OneLocker");
 				$("#content").html('\
 				<h1>School</h1>\
-				<div style="width: 750px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 594.44px; margin: 0px 8px 8px 0px;">\
 					<h2>G Suite:</h2>\
 					<span>\
 						<a href="https://classroom.google.com/?authuser=athomas5149@stu.lmtsd.org" target="_blank" title="Google Classroom"><img src="https://lh4.googleusercontent.com/jWBBqrENpBVVCcMOekDOhhn-Zv_nAhWTysQK7zvANbyNd4UDodNlqoPpDE_XRCIpazdf=w300" width=100 height=100 alt="Google Classroom"></a>\
-						<a href="https://drive.google.com/drive/?authuser=athomas5149@stu.lmtsd.org" target="_blank" title="Google Drive"><img src="https://lh3.googleusercontent.com/A-jk5o_CT_ucUdRRwmchoeMx1qoKolfGKFptEBHANKZELMmeJALE7m4KOZdDu0NjFNiekH0j2T981f5N_nZ_IU1HsRehKLPRQAX0=h120" width=100 height=100 alt="Google Drive"></a>\
-						<a href="https://meet.google.com/" target="_blank" title="Google Meet"><img src="https://www.gstatic.com/images/branding/product/2x/meet_96dp.png" width=100 height=100 alt="Google Meet"></a>\
-						<a href="https://mail.google.com/mail/u/?authuser=athomas5149@stu.lmtsd.org" target="_blank" title="Gmail"><img src="https://lh3.googleusercontent.com/86N90L0IJ785jaRXwXX0UAycK5MZQ3fTJRaIjgvF2PVJqjw5NkVequXgELwIEAnJG0SRxVUSaa5_Yw1_wW3LrxAN4oNZ8VCoeQuddmI=h120" width=100 height=100 alt="Gmail"></a>\
-						<a href="https://calendar.google.com/calendar/?authuser=athomas5149@stu.lmtsd.org" target="_blank" title="Google Calendar"><img src="https://lh3.googleusercontent.com/Wj2TC83OMCWpHPH9R-ebuLwseO5cPbsoaM8YEx3oRcakA2Ck4OG-SVv9YrYE4arZ_jC2VnImXJdr1xJognMvnmAQcZtdc54vKttQew=h120" width=100 height=100 alt="Google Calander"></a>\
+						<a href="https://drive.google.com/drive/?authuser=athomas5149@stu.lmtsd.org" target="_blank" title="Google Drive"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Google_Drive_icon_%282020%29.svg/100px-Google_Drive_icon_%282020%29.svg.png" width=111.11 height=100 alt="Google Drive"></a>\
+						<a href="https://mail.google.com/mail/u/?authuser=athomas5149@stu.lmtsd.org" target="_blank" title="Gmail"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/100px-Gmail_icon_%282020%29.svg.png" width=133.33 height=100 alt="Gmail"></a>\
+						<a href="https://calendar.google.com/calendar/?authuser=athomas5149@stu.lmtsd.org" target="_blank" title="Google Calendar"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Google_Calendar_icon_%282020%29.svg/100px-Google_Calendar_icon_%282020%29.svg.png" width=100 height=100 alt="Google Calander"></a>\
+					</span>\
+				</div>\
+				<div style="width: 350px; margin: 0px 8px 8px 0px;">\
+					<h2>Student Info:</h2>\
+					<span>\
+						<a href="https://docs.google.com/spreadsheets/d/10JM2j99gsuDxnmz3sZSg9ba3a1x3w1m4-UE5FRM6_zw/edit" target="_blank" title="Class Schedule"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/schedule.svg" id="dSched" width=100 height=100 alt="Class Schedule"></a>\
+						<a href="https://lastpass.com/?ac=1&lpnorefresh=1" target="_blank" title="LastPass"><img src="https://play-lh.googleusercontent.com/BPgJq2T40gw219T9wcXPld0urrii1L9WwGZ0xovChB7fy-KFfVlKPE6oT5D7lIeQRecJ=s180-rw" width=100 height=100 alt="LastPass"></a>\
 					</span>\
 				</div>\
 				<div style="width: 550px; margin: 0px 8px 8px 0px;">\
@@ -67,31 +73,36 @@
 						<a href="https://sso.rumba.pk12ls.com/sso/login?service=https://cat.easybridge.pk12ls.com/ca/dashboard.htm&idpmetadata=https://www.lmtsd.org" target="_blank" title="Savvas Realize"><img src="https://media-exp1.licdn.com/dms/image/C4D0BAQEMR68Z6LCPEg/company-logo_200_200/0?e=2159024400&v=beta&t=EHibD-PK0HAuw6UHfFgUBhgFxwDkUZ7jh9a-GuxSN0k" width=100 height=100 alt="Savvas Realize"></a>\
 					</span>\
 				</div>\
-				<div style="width: 650px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 1001px; margin: 0px 8px 8px 0px;">\
 					<h2>Study Tools:</h2>\
 					<span>\
 						<a href="https://www.khanacademy.org/" target="_blank" title="Khan Academy"><img src="https://avatars0.githubusercontent.com/u/15455?s=200&v=4" width=100 height=100 alt="Khan Academy"></a>\
-						<a href="https://www.youtube.com/user/crashcourse" target="_blank" title="Crash Course"><img src="https://upload.wikimedia.org/wikipedia/en/e/e9/Crash_Course_logo.png" width=100 height=100 alt="Crash Course"></a>\
-						<a href="https://quizlet.com/latest" target="_blank" title="Quizlet"><img src="https://quizlet.com/a/i/brandmark/1024.893fa7e00da6339.png" width=100 height=100 alt="Quizlet"></a>\
-						<a href="https://www.sparknotes.com/" target="_blank" title="SparkNotes"><img src="https://lh3.googleusercontent.com/tGMpDn7vYIDTGnqSCQIzdOpIXdft1hDj8OGBw65Oj8__2nTEUjfwQpROwK7harTCRbE4=s180-rw" width=100 height=100 alt="SparkNotes"></a>\
+						<a href="https://www.mathsisfun.com/" target="_blank" title="Math is Fun"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@0cd069f/MathFun.png" width=151 height=100 alt="Math is Fun"></a>\
 						<a href="http://www.edumedia-sciences.com/en/" target="_blank" title="eduMedia"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/eduMedia.png" width=100 height=100 alt="eduMedia"></a>\
+						<a href="https://www.youtube.com/user/crashcourse" target="_blank" title="Crash Course"><img src="https://upload.wikimedia.org/wikipedia/en/e/e9/Crash_Course_logo.png" width=100 height=100 alt="Crash Course"></a>\
+						<a href="https://translate.google.com/?sl=auto&tl=en&op=translate" target="_blank" title="Google Translate"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Google_Translate_logo.svg/100px-Google_Translate_logo.svg.png" width=100 height=100 alt="Google Translate"></a>\
+						<a href="https://quizlet.com/latest" target="_blank" title="Quizlet"><img src="https://quizlet.com/a/i/brandmark/1024.893fa7e00da6339.png" width=100 height=100 alt="Quizlet"></a>\
+						<a href="https://www.merriam-webster.com/" target="_blank" title="Merriam-Webster"><img src="https://merriam-webster.com/assets/mw/static/app-css-images/logos/mw-logo.png" width=100 height=100 alt="Merriam-Webster"></a>\
+						<a href="https://www.sparknotes.com/" target="_blank" title="SparkNotes"><img src="https://lh3.googleusercontent.com/tGMpDn7vYIDTGnqSCQIzdOpIXdft1hDj8OGBw65Oj8__2nTEUjfwQpROwK7harTCRbE4=s180-rw" width=100 height=100 alt="SparkNotes"></a>\
 					</span>\
 				</div>\
-				<div style="width: 350px; margin: 0px 8px 8px 0px;">\
-					<h2>Library:</h2>\
+				<div style="width: 550px; margin: 0px 8px 8px 0px;">\
+					<h2>Projects:</h2>\
 					<span>\
-						<a href="https://sites.google.com/lmtsd.org/lmhs-library/home" target="_blank" title="LMHS Library"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/HSLibrary.gif" width=100 height=100 alt="LMHS Library"></a>\
-						<a href="https://docs.google.com/spreadsheets/d/1QQ0CI7502RT3EffllNL2N7gAnYp4ks4STnkDfAvgSf4/edit" target="_blank" title="Passwords"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/password.svg" id="dPass" width=100 height=100 alt="Passwords"></a>\
+						<a href="https://www.canva.com/" target="_blank" title="Canva"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@5024bb5/Canva.png" width=100 height=100 alt="Canva"></a>\
+						<a href="https://www.ilovepdf.com/" target="_blank" title="I Love PDF"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@145658a/PDF.png" id="dPDF" width=100 height=100 alt="I Love PDF"></a>\
+						<a href="https://www.pjasregistration.com/v1/dashboard/participant" target="_blank" title="PJAS"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@04337a5/PJAS.png" width=100 height=100 alt="PJAS"></a>\
+						<a href="https://mcsrc.stemwizard.com/student/home" target="_blank" title="MCSRC"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@aea15aa/Montco.png" width=100 height=100 alt="MCSRC"></a>\
 					</span>\
 				</div>\
-				<div style="width: 654.166666666px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 628.793532336px; margin: 0px 8px 8px 0px;">\
 					<h2>LMTSD:</h2>\
 					<span>\
 						<a href="https://www.lmtsd.org" target="_blank" title="Lower Moreland Township School District"><img src="https://i.vimeocdn.com/portrait/3663763_300x300" width=100 height=100 alt="Lower Moreland Township School District"></a>\
 						<a href="https://www.lmtsd.org/Domain/75" target="_blank" title="Lower Moreland High School"><img src="https://schoolassets.s3.amazonaws.com/logos/2041/2041.gif" width=100 height=100 alt="Lower Moreland High School"></a>\
 						<a href="https://esp41pehac.eschoolplus.powerschool.com/HomeAccess/district/student/lmtsd" target="_blank" title="Home Access Center"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/hac.png" width=104.166666666 height=100 alt="Home Access Center"></a>\
 						<a href="https://www.lmtsd.org/Page/12677" target="_blank" title="Virtual Backpack"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/virtualBackpack.png" width=74.62686567 height=100 alt="Virtual Backpack"></a>\
-						<a href="https://docs.google.com/spreadsheets/d/10JM2j99gsuDxnmz3sZSg9ba3a1x3w1m4-UE5FRM6_zw/edit" target="_blank" title="Class Schedule"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/schedule.svg" id="dSched" width=100 height=100 alt="Class Schedule"></a>\
+						<a href="https://sites.google.com/lmtsd.org/lmhs-library/home" target="_blank" title="LMHS Library"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/HSLibrary.gif" width=100 height=100 alt="LMHS Library"></a>\
 					</span>\
 				</div>\
 				');
