--- a/OneLocker/page2.html
+++ b/OneLocker/page2.html
@@ -48,10 +48,10 @@
 				$("title").html("School — OneLocker");
 				$("#content").html('\
 				<h1>School</h1>\
-				<div style="width: 594.44px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 610.22px; margin: 0px 8px 8px 0px;">\
 					<h2>G Suite:</h2>\
 					<span>\
-						<a href="https://classroom.google.com/?authuser=athomas5149@stu.lmtsd.org" target="_blank" title="Google Classroom"><img src="https://lh4.googleusercontent.com/jWBBqrENpBVVCcMOekDOhhn-Zv_nAhWTysQK7zvANbyNd4UDodNlqoPpDE_XRCIpazdf=w300" width=100 height=100 alt="Google Classroom"></a>\
+						<a href="https://classroom.google.com/?authuser=athomas5149@stu.lmtsd.org" target="_blank" title="Google Classroom"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Google_Classroom_icon.svg/220px-Google_Classroom_icon.svg.png" width=115.78 height=100 alt="Google Classroom"></a>\
 						<a href="https://drive.google.com/drive/?authuser=athomas5149@stu.lmtsd.org" target="_blank" title="Google Drive"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Google_Drive_icon_%282020%29.svg/100px-Google_Drive_icon_%282020%29.svg.png" width=111.11 height=100 alt="Google Drive"></a>\
 						<a href="https://mail.google.com/mail/u/?authuser=athomas5149@stu.lmtsd.org" target="_blank" title="Gmail"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/100px-Gmail_icon_%282020%29.svg.png" width=133.33 height=100 alt="Gmail"></a>\
 						<a href="https://calendar.google.com/calendar/?authuser=athomas5149@stu.lmtsd.org" target="_blank" title="Google Calendar"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Google_Calendar_icon_%282020%29.svg/100px-Google_Calendar_icon_%282020%29.svg.png" width=100 height=100 alt="Google Calander"></a>\
