--- a/OneLocker/page2.html
+++ b/OneLocker/page2.html
@@ -61,7 +61,7 @@
 					<h2>Student Info:</h2>\
 					<span>\
 						<a href="https://docs.google.com/spreadsheets/d/10JM2j99gsuDxnmz3sZSg9ba3a1x3w1m4-UE5FRM6_zw/edit" target="_blank" title="Class Schedule"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/schedule.svg" id="dSched" width=100 height=100 alt="Class Schedule"></a>\
-						<a href="https://lastpass.com/?ac=1&lpnorefresh=1" target="_blank" title="LastPass"><img src="https://play-lh.googleusercontent.com/BPgJq2T40gw219T9wcXPld0urrii1L9WwGZ0xovChB7fy-KFfVlKPE6oT5D7lIeQRecJ=s180-rw" width=100 height=100 alt="LastPass"></a>\
+						<a href="https://vault.bitwarden.com/#/" target="_blank" title="Bitwarden"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9041aa7/bitward.png" width=100 height=100 alt="Bitwarden"></a>\
 					</span>\
 				</div>\
 				<div style="width: 550px; margin: 0px 8px 8px 0px;">\
