--- a/OneLocker/page1.html
+++ b/OneLocker/page1.html
@@ -86,11 +86,12 @@
 						<a href="https://www.khanacademy.org/" target="_blank" title="Khan Academy"><img src="https://avatars0.githubusercontent.com/u/15455?s=200&v=4" width=100 height=100 alt="Khan Academy"></a>\
 					</span>\
 				</div>\
-				<div style="width: 350px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 450px; margin: 0px 8px 8px 0px;">\
 					<h2>Design:</h2>\
 					<span>\
 						<a href="https://www.canva.com/" target="_blank" title="Canva"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@5024bb5/Canva.png" width=100 height=100 alt="Canva"></a>\
 						<a href="https://www.vectary.com/dashboard/?teamId=b7845d38-67a1-4439-a286-e9c66adccc22" target="_blank" title="Vectary"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@5024bb5/Vectary.png" id="dVec" width=100 height=100 alt="Vectary"></a>\
+						<a href="https://polar3d.com/" target="_blank" title="Polar Cloud"><img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Polar_Cloud_Enabled_Logo.png" width=100 height=100 alt="Polar Cloud"</a>\
 					</span>\
 				</div>\
 				<div style="width: 450px; margin: 0px 8px 8px 0px;">\
